--- a/public/scss/component/_slider.scss
+++ b/public/scss/component/_slider.scss
@@ -42,7 +42,7 @@
   overflow: hidden;
   .wrap-pagination {
     position: absolute;
-    z-index: 10;
+    z-index: 0;
     bottom: 57px;
     left: 0;
     right: 0;
